# local-image-hub

./: .env.example  .gitignore  AGENT.md  Makefile  PROMPT_GUIDE.md  README.md  pyproject.toml  requirements.txt
.claude/: AGENT.md  settings.json
app/: gallery_store.py  main.py
app/presets/: __init__.py  characters.py  styles.py
app/providers/: nai.py
app/queue/: __init__.py  jobs.py  worker.py
app/routers/: gallery.py  generate.py  jobs.py
app/schemas/: __init__.py
docs/: NAI_PROMPT_GUIDE.md
scripts/: all_presets_dolsoe.py  all_presets_test.py  animagine_all_200.py  animation_preset_100.py  band_anime_group.py  band_anime_group2.py  band_crossover_style.py  band_position_crossover.py  band_position_v2.py  batch_generate.py  black_hanekawa.py  bocchi_adults_300.py  bocchi_name_test.py  bocchi_pa_san_50.py  bocchi_side_solo.py  bocchi_side_test.py  bold_pop_test.py  bold_pop_test2.py  bunny_girl_100.py  bunny_girl_no_keion_100.py  catmaid_aqua_test.py  compare_animagine_100.py  compare_nai_100.py  compare_v45_models.py  cozy_compare.py  cozy_test.py  dolsoe_all_presets.py  dolsoe_animagine.py  dolsoe_emoticon.py  dolsoe_greeting.py  dolsoe_hihit.py  dolsoe_hihit5.py  dolsoe_mega_300.py  dolsoe_monogatari_200.py  dolsoe_monogatari_30.py  dolsoe_season2_300.py  dolsoe_yandere.py  fern_aqua.py  freckle_character_test.py  frieren_himmel.py  (+88 more)
