[project]
name = "image-gen-hub"
version = "0.1.0"
description = "Unified image generation API - Local models + Cloud APIs (NAI, etc.)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "torch>=2.0.0",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.20.0",
    "httpx>=0.27.0",
    "sentencepiece>=0.1.99",
    "saq>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
